--- a/Activitats/Javascript/producte.html
+++ b/Activitats/Javascript/producte.html
@@ -16,6 +16,16 @@
 			u.innerHTML = txt;
 		}
 
+		function newFunda(){
+			var nom = document.getElementById("nom").value;
+			var ref = document.getElementById("ref").value;
+			var cat = document.getElementById("cat").value;
+			var pr = document.getElementById("pr").value;
+
+			var a = new Funda(nom, ref, cat, pr);
+			return a;
+		}
+
 		function orderAsc(){
 			list.sort(function(x, y){ return (x.preu > y.preu) ? 1 : -1;});
 			printList();
@@ -46,7 +56,7 @@
 
 			var count = 0;
 			for(var i = 0; i < list.length; i++){
-				if(list[i].getCategoria() === "Iphone"){
+				if(list[i].getCategoria() === "Xiaomi"){
 					count++;
 				}
 			}
@@ -56,19 +66,51 @@
 		function restart(){
 			printList();
 		}
+
+		function addInici(){
+			var a = newFunda();
+			list.unshift(a);
+			printList();
+		}
+
+		function takeInici(){
+			list.shift();
+			printList();
+		}
+
+		function addFinal(){
+			var a = newFunda();
+			list.push(a);
+			printList();
+		}
+
+		function takeFinal(){
+			list.pop();
+			printList();
+		}
 	</script>
 </head>
 <body>
-	<h3>Funda de Moviles</h3>
+	<h3>Phone case list</h3>
 	<ul id="lista">
 	</ul>
 	<hr/>
-	Search:	<input type="text" id="item"/><br/><br/>
+	Search:		<input type="text" id="item"/><br/><br/>
 	<button onclick="findByCat()">Search by this category</button>
 	<button onclick="orderAsc()">Seach by Asc. Price</button>
 	<button onclick="orderDesc()">Seach by Desc. Price</button>
-	<button onclick="countBrand()">Total Iphones</button>
+	<button onclick="countBrand()">Total Xiaomis</button>
 	<button onclick="restart()">Go home</button>
+
+	<h3>Data management</h3>
+	Name:		<input type="text" id="nom"/><br/><br/>
+	Reference:	<input type="text" id="ref"/><br/><br/>
+	Category:	<input type="text" id="cat"/><br/><br/>
+	Price:		<input type="text" id="pr"/><br/><br/>
+	<button onclick="addInici()">Add top</button>
+	<button onclick="takeInici()">Take top</button>
+	<button onclick="addFinal()">Add end</button>
+	<button onclick="takeFinal()">Take end</button>
 	<script type="text/javascript">
 		var list = new Array();
 
