Activitats JQuery fetes i ADHOC 4

--- a/Activitats/JQuery/ADHOC3.html
+++ b/Activitats/JQuery/ADHOC3.html
@@ -17,58 +17,58 @@
 	<body>
 		<h1>Selecting Elements</h1>
 		<hr>
-		<div id="xiaomi">
-			<p id="XZM568" class="caro">Xioami Mi Mix 3 --- XZM568 --- Xiaomi --- <b>750</b></p>
-			<p id="RTS809" class="medio">Xioami Redmi Note 7 --- RTS809 --- Xiaomi --- <b>135</b></p>
-			<p id="YTP212" class="barato">Xioami Redmi 4A --- YTP212 --- Xiaomi --- <b>110</b></p>
+		<div id="Xiaomi">
+			<p id="XZM568" class="caro">Xiaomi Mi Mix 3 --- XZM568 --- Xiaomi --- <b id="bexp">750</b></p>
+			<p id="RTS809" class="medio">Xiaomi Redmi Note 7 --- RTS809 --- Xiaomi --- <b>135</b></p>
+			<p id="YTP212" class="barato">Xiaomi Redmi 4A --- YTP212 --- Xiaomi --- <b>110</b></p>
 		</div><br>
-		<div id="apple">
-			<p id="LHK998" class="caro">Apple Iphone 11 --- LHK998 --- Apple --- <b>860</b></p>
+		<div id="Apple">
+			<p id="LHK998" class="caro">Apple Iphone 11 --- LHK998 --- Apple --- <b>60</b></p>
 			<p id="KUO995" class="medio">Apple Iphone 7 --- KUO995 --- Apple --- <b>465</b></p>
 			<p id="GFH500" class="barato">Apple Iphone 6s --- GFH500 --- Apple --- <b>210</b></p>
 		</div><br>
-		<div id="huawei">
+		<div id="Huawei">
 			<p id="UJF012" class="caro">Huawei P30 Pro --- UJF012 --- Huawei --- <b>860</b></p>
 			<p id="ERT444" class="medio">Huawei P Smart --- ERT444 --- Huawei --- <b>170</b></p>
 			<p id="BGY132" class="barato">Huawei Y5 --- BGY132 --- Huawei --- <b>90</b></p>
 		</div><br>
-		<div id="motorola">
+		<div id="Motorola">
 			<p id="PPS767" class="caro">Motorola One Zoom --- PPS767 --- Motorola --- <b>430</b></p>
 			<p id="XCD633" class="medio">Motorola Moto G7 --- XCD633 --- Motorola --- <b>216</b></p>
 			<p id="FNC123" class="barato">Motorola Moto E4 --- FNC123 --- Motorola --- <b>160</b></p>
 		</div><br>
 		<hr><br>
-		<p>ID</p>
-		<input type="text" id="ids">
-		<input type="button" value="Select" id="b1">
-		<p>CLASS</p>
-		<input type="text" id="classes">
-		<input type="button" value="Select" id="b2">
-		<p>TAG</p>
-		<input type="text" id="tags">
-		<input type="button" value="Select" id="b3">
+		<select id="sel1">
+			<option value="Xiaomi">Xiaomi</option>
+			<option value="Apple">Apple</option>
+			<option value="Motorola">Motorola</option>
+			<option value="Huawei">Huawei</option>
+		</select>
+		<input type="button" name="mascaros" id="mexp" value="Most Expensive">
+		<input type="button" name="mascaros" id="lexp" value="Less Expensive">
 		<script type="text/javascript">
 			$(document).ready(function(){
-				$("#b1").click(function(){
+
+				$("#mexp").click(function(){
 					$("div, p, h1, b").css({"background-color":"white"});
-					var ids = $("#ids").val();
-					var selected = $("#" + ids + ", #" + ids + "*");
-					selected.css({"background-color":"lightblue"});
+					var mexp = $("#sel1 option:selected").text();
+					var selecteds = $("#" + mexp + ", #" + mexp + " *").children("b");
+
+					var max=0;
+					var indexMax = 0;
+					selecteds.each(function (index){
+						var p = $(this).text();
+						if(parseInt(p)>max){
+							max = parseInt(p);
+							indexMax = index;
+						}
+					});
+					var selecteds = $("#" + mexp).children("p").eq(indexMax);
+	
+					selecteds.css({"background-color":"blue"});
 				});
 
-				$("#b2").click(function(){
-					$("div, p, h1, b").css({"background-color":"white"});
-					var classes = $("#classes").val();
-					var selected = $("." + classes + ", ." + classes + " *");
-					selected.css({"background-color":"lightcoral"});
-				});
 
-				$("#b3").click(function(){
-					$("div, p, h1, b").css({"background-color":"white"});
-					var tags = $("#tags").val();
-					var selected = $(tags + ", " + tags + " *");
-					selected.css({"background-color":"lightgray"});
-				});
 			});
 		</script>
 	</body>
